@@ -1,0 +1,212 @@
+# CMAKE generated file: DO NOT EDIT!
+# Generated by "Unix Makefiles" Generator, CMake Version 2.8
+
+# Default target executed when no arguments are given to make.
+default_target: all
+.PHONY : default_target
+
+#=============================================================================
+# Special targets provided by cmake.
+
+# Disable implicit rules so canonical targets will work.
+.SUFFIXES:
+
+# Remove some rules from gmake that .SUFFIXES does not remove.
+SUFFIXES =
+
+.SUFFIXES: .hpux_make_needs_suffix_list
+
+# Suppress display of executed commands.
+$(VERBOSE).SILENT:
+
+# A target that is always out of date.
+cmake_force:
+.PHONY : cmake_force
+
+#=============================================================================
+# Set environment variables for the build.
+
+# The shell in which to execute make rules.
+SHELL = /bin/sh
+
+# The CMake executable.
+CMAKE_COMMAND = /usr/bin/cmake
+
+# The command to remove a file.
+RM = /usr/bin/cmake -E remove -f
+
+# Escaping for special characters.
+EQUALS = =
+
+# The program to use to edit the cache.
+CMAKE_EDIT_COMMAND = /usr/bin/ccmake
+
+# The top-level source directory on which CMake was run.
+CMAKE_SOURCE_DIR = /home/will/yoshimi-code/src
+
+# The top-level build directory on which CMake was run.
+CMAKE_BINARY_DIR = /home/will/yoshimi-code/src
+
+#=============================================================================
+# Targets provided globally by CMake.
+
+# Special rule for the target edit_cache
+edit_cache:
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Running CMake cache editor..."
+	/usr/bin/ccmake -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
+.PHONY : edit_cache
+
+# Special rule for the target edit_cache
+edit_cache/fast: edit_cache
+.PHONY : edit_cache/fast
+
+# Special rule for the target install
+install: preinstall
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Install the project..."
+	/usr/bin/cmake -P cmake_install.cmake
+.PHONY : install
+
+# Special rule for the target install
+install/fast: preinstall/fast
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Install the project..."
+	/usr/bin/cmake -P cmake_install.cmake
+.PHONY : install/fast
+
+# Special rule for the target install/local
+install/local: preinstall
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Installing only the local directory..."
+	/usr/bin/cmake -DCMAKE_INSTALL_LOCAL_ONLY=1 -P cmake_install.cmake
+.PHONY : install/local
+
+# Special rule for the target install/local
+install/local/fast: install/local
+.PHONY : install/local/fast
+
+# Special rule for the target install/strip
+install/strip: preinstall
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Installing the project stripped..."
+	/usr/bin/cmake -DCMAKE_INSTALL_DO_STRIP=1 -P cmake_install.cmake
+.PHONY : install/strip
+
+# Special rule for the target install/strip
+install/strip/fast: install/strip
+.PHONY : install/strip/fast
+
+# Special rule for the target list_install_components
+list_install_components:
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Available install components are: \"Unspecified\""
+.PHONY : list_install_components
+
+# Special rule for the target list_install_components
+list_install_components/fast: list_install_components
+.PHONY : list_install_components/fast
+
+# Special rule for the target rebuild_cache
+rebuild_cache:
+	@$(CMAKE_COMMAND) -E cmake_echo_color --switch=$(COLOR) --cyan "Running CMake to regenerate build system..."
+	/usr/bin/cmake -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR)
+.PHONY : rebuild_cache
+
+# Special rule for the target rebuild_cache
+rebuild_cache/fast: rebuild_cache
+.PHONY : rebuild_cache/fast
+
+# The main all target
+all: cmake_check_build_system
+	cd /home/will/yoshimi-code/src && $(CMAKE_COMMAND) -E cmake_progress_start /home/will/yoshimi-code/src/CMakeFiles /home/will/yoshimi-code/src/CmdLine/CMakeFiles/progress.marks
+	cd /home/will/yoshimi-code/src && $(MAKE) -f CMakeFiles/Makefile2 CmdLine/all
+	$(CMAKE_COMMAND) -E cmake_progress_start /home/will/yoshimi-code/src/CMakeFiles 0
+.PHONY : all
+
+# The main clean target
+clean:
+	cd /home/will/yoshimi-code/src && $(MAKE) -f CMakeFiles/Makefile2 CmdLine/clean
+.PHONY : clean
+
+# The main clean target
+clean/fast: clean
+.PHONY : clean/fast
+
+# Prepare targets for installation.
+preinstall: all
+	cd /home/will/yoshimi-code/src && $(MAKE) -f CMakeFiles/Makefile2 CmdLine/preinstall
+.PHONY : preinstall
+
+# Prepare targets for installation.
+preinstall/fast:
+	cd /home/will/yoshimi-code/src && $(MAKE) -f CMakeFiles/Makefile2 CmdLine/preinstall
+.PHONY : preinstall/fast
+
+# clear depends
+depend:
+	cd /home/will/yoshimi-code/src && $(CMAKE_COMMAND) -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR) --check-build-system CMakeFiles/Makefile.cmake 1
+.PHONY : depend
+
+# Convenience name for target.
+CmdLine/CMakeFiles/yoshimi-cmdline.dir/rule:
+	cd /home/will/yoshimi-code/src && $(MAKE) -f CMakeFiles/Makefile2 CmdLine/CMakeFiles/yoshimi-cmdline.dir/rule
+.PHONY : CmdLine/CMakeFiles/yoshimi-cmdline.dir/rule
+
+# Convenience name for target.
+yoshimi-cmdline: CmdLine/CMakeFiles/yoshimi-cmdline.dir/rule
+.PHONY : yoshimi-cmdline
+
+# fast build rule for target.
+yoshimi-cmdline/fast:
+	cd /home/will/yoshimi-code/src && $(MAKE) -f CmdLine/CMakeFiles/yoshimi-cmdline.dir/build.make CmdLine/CMakeFiles/yoshimi-cmdline.dir/build
+.PHONY : yoshimi-cmdline/fast
+
+CmdLine.o: CmdLine.cpp.o
+.PHONY : CmdLine.o
+
+# target to build an object file
+CmdLine.cpp.o:
+	cd /home/will/yoshimi-code/src && $(MAKE) -f CmdLine/CMakeFiles/yoshimi-cmdline.dir/build.make CmdLine/CMakeFiles/yoshimi-cmdline.dir/CmdLine.cpp.o
+.PHONY : CmdLine.cpp.o
+
+CmdLine.i: CmdLine.cpp.i
+.PHONY : CmdLine.i
+
+# target to preprocess a source file
+CmdLine.cpp.i:
+	cd /home/will/yoshimi-code/src && $(MAKE) -f CmdLine/CMakeFiles/yoshimi-cmdline.dir/build.make CmdLine/CMakeFiles/yoshimi-cmdline.dir/CmdLine.cpp.i
+.PHONY : CmdLine.cpp.i
+
+CmdLine.s: CmdLine.cpp.s
+.PHONY : CmdLine.s
+
+# target to generate assembly for a file
+CmdLine.cpp.s:
+	cd /home/will/yoshimi-code/src && $(MAKE) -f CmdLine/CMakeFiles/yoshimi-cmdline.dir/build.make CmdLine/CMakeFiles/yoshimi-cmdline.dir/CmdLine.cpp.s
+.PHONY : CmdLine.cpp.s
+
+# Help Target
+help:
+	@echo "The following are some of the valid targets for this Makefile:"
+	@echo "... all (the default if no target is provided)"
+	@echo "... clean"
+	@echo "... depend"
+	@echo "... edit_cache"
+	@echo "... install"
+	@echo "... install/local"
+	@echo "... install/strip"
+	@echo "... list_install_components"
+	@echo "... rebuild_cache"
+	@echo "... yoshimi-cmdline"
+	@echo "... CmdLine.o"
+	@echo "... CmdLine.i"
+	@echo "... CmdLine.s"
+.PHONY : help
+
+
+
+#=============================================================================
+# Special targets to cleanup operation of make.
+
+# Special rule to run CMake to check the build system integrity.
+# No rule that depends on this can have commands that come from listfiles
+# because they might be regenerated.
+cmake_check_build_system:
+	cd /home/will/yoshimi-code/src && $(CMAKE_COMMAND) -H$(CMAKE_SOURCE_DIR) -B$(CMAKE_BINARY_DIR) --check-build-system CMakeFiles/Makefile.cmake 0
+.PHONY : cmake_check_build_system
+
